[gd_scene load_steps=17 format=3 uid="uid://rjpyjelqnsml"]

[ext_resource type="Script" path="res://scripts/weapons/missile.gd" id="1_bx2il"]
[ext_resource type="AudioStream" uid="uid://cilm5agmcp85i" path="res://sounds/shots/shot_ (1).wav" id="2_5wim3"]
[ext_resource type="AudioStream" uid="uid://c700jyo7bsmuc" path="res://sounds/shots/shot_ (2).wav" id="3_q10h2"]
[ext_resource type="AudioStream" uid="uid://b43dqhq60rc1g" path="res://sounds/explosions/explosion (3).wav" id="4_deoym"]
[ext_resource type="AudioStream" uid="uid://8pc8lxpamcu4" path="res://sounds/shots/shot_ (4).wav" id="5_b4pts"]
[ext_resource type="AudioStream" uid="uid://3vdvbiv2x40d" path="res://sounds/shots/shot_ (5).wav" id="6_pdulr"]
[ext_resource type="AudioStream" uid="uid://dxpuyu84lrj6s" path="res://sounds/shots/shot_ (6).wav" id="7_j8m43"]
[ext_resource type="AudioStream" uid="uid://gtkcy7y25ug" path="res://sounds/shots/shot_ (7).wav" id="8_4dyf4"]
[ext_resource type="AudioStream" uid="uid://c62kjyo2y8y20" path="res://sounds/shots/shot_ (8).wav" id="9_pun1m"]
[ext_resource type="AudioStream" uid="uid://xdyva7qo10dk" path="res://sounds/shots/shot_ (9).wav" id="10_e11vt"]
[ext_resource type="Script" path="res://scripts/components/movement_component.gd" id="11_7bkf3"]
[ext_resource type="Texture2D" uid="uid://d04gmrqs45y36" path="res://sprites/explosion.png" id="12_unrpa"]
[ext_resource type="Texture2D" uid="uid://d0tjd5ny6ol8k" path="res://sprites/missile.png" id="13_mb1ud"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_k4n72"]
streams_count = 9
stream_0/stream = ExtResource("2_5wim3")
stream_1/stream = ExtResource("3_q10h2")
stream_2/stream = ExtResource("4_deoym")
stream_3/stream = ExtResource("5_b4pts")
stream_4/stream = ExtResource("6_pdulr")
stream_5/stream = ExtResource("7_j8m43")
stream_6/stream = ExtResource("8_4dyf4")
stream_7/stream = ExtResource("9_pun1m")
stream_8/stream = ExtResource("10_e11vt")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx2ns"]
size = Vector2(13.5, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_6xhng"]
radius = 30.0

[node name="Missile" type="CharacterBody2D" groups=["Projectile"]]
visibility_layer = 2
collision_layer = 8
collision_mask = 5
script = ExtResource("1_bx2il")
speed = 100.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(1, 0.9, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(5, 2)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("13_mb1ud")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_k4n72")
volume_db = -20.0
pitch_scale = 0.6
autoplay = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_jx2ns")

[node name="MovementComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_7bkf3")

[node name="CollisionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(-2.25, 0)
shape = SubResource("RectangleShape2D_jx2ns")

[node name="ExplosionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_6xhng")

[node name="Sprite2D" type="Sprite2D" parent="ExplosionArea"]
texture = ExtResource("12_unrpa")

[connection signal="area_entered" from="CollisionArea" to="." method="_on_collision_area_entered"]
